--- a/package.json
+++ b/package.json
@@ -4,5 +4,7 @@
   "main": "server/main.js",
   "author": "Hack Reactor",
   "license": "Copyright 2013, Hack Reactor. All rights reserved.",
-  "dependencies": {}
+  "dependencies": {
+    "jasmine-node": "~1.11.0"
+  }
 }
